<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Activity2">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="751dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/id_waves_topp"
                android:layout_width="467dp"
                android:layout_height="125dp"
                android:src="@drawable/ic_waves"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="-27dp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="219dp"
                android:layout_height="49dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.196"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_level_gamer" />

            <TextView
                android:id="@+id/id_new_accont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:text="Nova Conta"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/id_waves_topp" />

            <TextView
                android:id="@+id/id_chose_picture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/picture"
                android:text="Vamos escolher uma foto?"
                android:textColor="#0099FF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/id_lock_image"
                app:layout_constraintTop_toTopOf="@+id/id_lock_image" />

            <ImageView
                android:id="@+id/id_lock_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_lock_24"
                android:tint="#0099FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_waves_topp" />

            <ImageView
                android:id="@+id/id_person"
                android:layout_width="130dp"
                android:layout_height="119dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_baseline_person_24"
                android:tint="#0099FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_chose_picture_text" />

            <ImageView
                android:id="@+id/id_camera_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:tint="#0099FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_chose_picture_text" />

            <ImageView
                android:id="@+id/id_lockk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_lock_24"
                android:tint="#0099FF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.101"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_person" />

            <TextView
                android:id="@+id/id_dados_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Dados para autenticação"
                android:textColor="#0099FF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toEndOf="@+id/id_lockk"
                app:layout_constraintTop_toBottomOf="@+id/id_person" />

            <EditText
                android:id="@+id/id_text_email"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/email2"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_dados_for" />

            <EditText
                android:id="@+id/id_keytwo"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/key2"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_text_email" />

            <ImageView
                android:id="@+id/id_little_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:src="@drawable/ic_baseline_person_24"
                android:tint="#0099FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_keytwo" />

            <TextView
                android:id="@+id/id_data"
                android:layout_width="147dp"
                android:layout_height="23dp"
                android:layout_marginTop="48dp"
                android:text="Dados pessoais"
                android:textColor="#0099FF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.038"
                app:layout_constraintStart_toEndOf="@+id/id_little_people"
                app:layout_constraintTop_toBottomOf="@+id/id_keytwo" />

            <TextView
                android:id="@+id/id_level_gamer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:hint="@string/level"
                android:text="Qual o seu nível gamer?"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_date" />

            <TextView
                android:id="@+id/id_console_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/console"
                android:text="Qual o seu console favorito?"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            <EditText
                android:id="@+id/id_name_adress"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_data" />

            <EditText
                android:id="@+id/id_city"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_name_adress" />

            <EditText
                android:id="@+id/id_date"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/birth"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_city" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="338dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:entries="@array/console"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_console_fav" />

            <RadioButton
                android:id="@+id/id_masc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="72dp"
                android:text="Masculino"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_sex" />

            <RadioButton
                android:id="@+id/id_fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="32dp"
                android:text="Feminino"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_sex" />

            <TextView
                android:id="@+id/id_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="16dp"
                android:text="Sexo"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <ImageView
                android:id="@+id/id_image_bottom2"
                android:layout_width="461dp"
                android:layout_height="154dp"
                android:layout_marginTop="8dp"
                android:rotation="180"
                android:src="@drawable/ic_wavetop"
                app:layout_constraintTop_toBottomOf="@+id/id_masc"
                tools:layout_editor_absoluteX="-17dp" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/level_type"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/seekBar"
                app:layout_constraintStart_toEndOf="@+id/seekBar"
                app:layout_constraintTop_toTopOf="@+id/seekBar"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>